# self-aware-mcp-server

./: .gitignore  LICENSE  README.md  package.json
self-aware/: .npmignore  README.md  package.json  tsconfig.json
self-aware-csharp/: .gitignore  Program.cs  README.md  self-aware-mcp.csproj
self-aware-python/: .gitignore  README.md  pyproject.toml  test_server.py
self-aware-python/src/self_aware/: __init__.py  server.py
self-aware/src/: index.ts
src/: index.ts  test.ts
