[project]
name = "self-aware-mcp"
version = "1.0.0"
description = "MCP server providing self-awareness tools: location, datetime, and calculator"
authors = [
    {name = "Alexander Kazantsev with z.ai", email = "akazant@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
self-aware-mcp = "self_aware.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/self_aware"]

[project.urls]
Repository = "https://github.com/vuguzum/self-aware-mcp-server"
